# system-sql

./: .gitignore  Cargo.toml  README.md  temp.csv
.github/workflows/: ci.yml
docs/examples/: README.md  get_current_dir.sql  insert_into_json.sql  join_on_file_types.sql  select_case.sql  show_columns.sql  update_files_set_name_to_dir_date.sql
sql/: insert_into_csv.sql  select_case.sql  update_files_set_name_to_dir_date.sql
src/: core.rs  display.rs  enumerable.rs  main.rs  query.rs  select.rs
src/core/: column.rs  dialect.rs  error.rs  expr_result.rs  file.rs  update.rs  value.rs
tests/: select_name.rs
