[package]
name = "systemsql"
version = "0.1.0"
authors = ["Graham Scanlon <gscanlon21@gmail.com>"]
edition = "2018"
include = [
    "src/**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlparser = "0.6.1"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = "0.19.4"
strum_macros = "0.19.4"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"